syntax = "proto3";

message MsgRequest {
  RequestHeader header = 1;
  RequestBody body = 2;
}

message RequestHeader {
  uint32 magicNo = 1;
  uint32 version = 2;
}

message RequestBody {
  int64 msgId = 1;
  MsgType msgType = 2;
  string content = 3;
  ContentType contentType = 4;
  MsgStatus status = 5;
  string from = 6;
  string to = 7;
  int64 sendTime = 8;
}

enum MsgType {
  SINGLE = 0;
  GROUP = 1;
}

enum ContentType {
  TEXT = 0;
  IMAGE = 1;
  VIDEO = 2;
  AUDIO = 3;
  FILE = 4;
}

enum MsgStatus {
  RECEIVED = 0;
  READ = 1;
  RECALLED = 2;
  SENT_FAIL = 3;
}